[gd_scene load_steps=19 format=3 uid="uid://cwp4qvdy2vm1p"]

[ext_resource type="Script" path="res://scenes/ui/meta_upgrade_card.gd" id="1_581xj"]
[ext_resource type="PackedScene" uid="uid://dnrurbplgvnjb" path="res://scenes/components/random_audio_stream_player_component.tscn" id="2_wtn56"]
[ext_resource type="AudioStream" uid="uid://bxk43s5tkh1l8" path="res://assets/audio/switch1.ogg" id="3_7ge5r"]
[ext_resource type="AudioStream" uid="uid://d1su08e78t4vl" path="res://assets/audio/switch2.ogg" id="4_v3al4"]
[ext_resource type="AudioStream" uid="uid://bsd60phgubgce" path="res://assets/audio/switch3.ogg" id="5_31upf"]
[ext_resource type="AudioStream" uid="uid://b3246v8auckn1" path="res://assets/audio/switch4.ogg" id="6_12bt2"]
[ext_resource type="AudioStream" uid="uid://dx1wwvfppqaev" path="res://assets/audio/switch5.ogg" id="7_aivi0"]
[ext_resource type="AudioStream" uid="uid://da0wmwpdvpunc" path="res://assets/audio/switch6.ogg" id="8_jstjk"]
[ext_resource type="AudioStream" uid="uid://0l8rc3tnafpg" path="res://assets/audio/switch7.ogg" id="9_5n3jc"]
[ext_resource type="AudioStream" uid="uid://mykym5xa21yo" path="res://assets/audio/switch8.ogg" id="10_v8rm4"]
[ext_resource type="AudioStream" uid="uid://b18sawajebfra" path="res://assets/audio/switch9.ogg" id="11_8rape"]
[ext_resource type="Texture2D" uid="uid://bhl3li3y8pox3" path="res://scenes/game_object/experience_vial/experience_vial.png" id="12_4soiw"]
[ext_resource type="AudioStream" uid="uid://bwnosbeh6khbb" path="res://assets/audio/switch10.ogg" id="12_keke5"]
[ext_resource type="PackedScene" uid="uid://cbofxyihqialk" path="res://scenes/ui/sound_button.tscn" id="13_3yg1l"]

[sub_resource type="Animation" id="Animation_ad8e6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_2ylg3"]
resource_name = "selected"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.4),
"transitions": PackedFloat32Array(1, 2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.174533, -0.0872665, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ClickAudioPlayerComponent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random_stream"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d4yrh"]
_data = {
"RESET": SubResource("Animation_ad8e6"),
"selected": SubResource("Animation_2ylg3")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5w0c6"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.458824, 0.890196, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)
anti_aliasing = false

[node name="MetaUpgradeCard" type="PanelContainer" groups=["meta_upgrade_card"]]
custom_minimum_size = Vector2(180, 150)
pivot_offset = Vector2(75, 75)
size_flags_horizontal = 4
size_flags_vertical = 3
script = ExtResource("1_581xj")

[node name="ClickAudioPlayerComponent" parent="." instance=ExtResource("2_wtn56")]
streams = Array[AudioStream]([ExtResource("3_7ge5r"), ExtResource("4_v3al4"), ExtResource("5_31upf"), ExtResource("6_12bt2"), ExtResource("7_aivi0"), ExtResource("8_jstjk"), ExtResource("9_5n3jc"), ExtResource("10_v8rm4"), ExtResource("11_8rape"), ExtResource("12_keke5")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d4yrh")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_font_sizes/font_size = 32
text = "Test Name"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"BlueOutlineLabel"
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
text = "This is a test description to be replaced, with a proper description of an ability!."
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -4

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CountLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"BlueOutlineLabel"
text = "x0"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = " - "

[node name="ExperienceLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_type_variation = &"BlueOutlineLabel"
text = "100/350"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("12_4soiw")

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/fill = SubResource("StyleBoxFlat_5w0c6")
max_value = 1.0
value = 0.91
show_percentage = false

[node name="PurchaseButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("13_3yg1l")]
unique_name_in_owner = true
layout_mode = 2
text = "Purchase
"
